# RabbitAsyncQ

./: .gitignore  pyproject.toml
rabbitasyncq/: job.py  manager.py  messaging.py
test/: test_jobmanager.py
