[project]
name = "rabbitasyncq"
version = "0.1.0"
description = "Asynchronous job queue using RabbitMQ as a broker. Allows cancellation of job and processing intermediary results."
authors = [
    {name = "Tenzin Chan",email = "tenzinchan@protonmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pika (>=1.3.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
test = [
    "pytest>=8.4.2",
]

